--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,18 @@
     padding: 10px;
     text-align: center;
     border-radius: 10px;
+    margin: auto;
 }
 
 .clock-time, .clock-ampm {
     font-family: sans-serif;
     font-size: 30px;
     color: #eeeeee;
+}
+
+.datelocation {
+    color: #eee;
+    margin: 0 auto;
 }
 
 .clock-time {
