--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,10 @@
 /* 7-day forecast segment */
 
 .forecast-div {
+    font-family: sans-serif;
+    margin: 2rem;
     background-color: #333;
-    width: 25%;
+    width: 45%;
     border-radius: 10px;
 }
 
