--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ body {
 
 .forecast-div {
     font-family: sans-serif;
+    font-size: .9rem;
     margin: 2rem;
     background-color: #333;
     width: 38%;
@@ -49,71 +50,94 @@ ul {
     list-style-type: none; /* Remove bullets */
     padding: auto;
     margin: auto;
-  }
+}
   
-  ul li {
+ ul li {
     text-align: center;
     border-bottom: 1px solid #ddd; /* Add a thin border to each list item */
     /* margin-top: -1px; Prevent double borders */
     background-color: #333;; /* Add a grey background color */
     padding: 1rem; /* Add some padding */
-  }
+}
 
-  ul li:nth-child(7){
+ul li:nth-child(7){
       border-bottom: none;
-  }
+}
 
-  /* Todo */
+ /* Todo */
 
-  .todo-section {
+.todo-section {
     text-align: center;
     font-family: sans-serif;
     margin: 2rem;
     background-color: #333;
     width: 38%;
     border-radius: 10px;
-  }
+}
 
-  .todo{
+.todo{
     display: flex;
     justify-content: center;
     background: lightgrey;
-  }
+ }
 
-  fieldset {
-      margin: auto;
-      border: none;
-  }
-
-  .todo-container {
-   text-align: center; 
-  }
-
-  .todo li{
-      flex: 1;
-      list-style: none;
-      font-family: sans-serif;
-      font-weight: bold;
-      color: black;
-      padding: 0.5rem;
-  }
-
-  .trashBtn, .checkBtn {
+ fieldset {
+    margin: auto;
     border: none;
-    color: white;
-    padding: 0.5rem;
-  }
+}
 
-  .trashBtn{
-      background: red;
-  }
+.todo-container {
+   text-align: center; 
+}
 
-  .checkBtn {
-      background: green;
-  }
-
-  .todo-input, .addBtn {
+.todo li{
+    flex: 1;
+    list-style: none;
+    font-family: sans-serif;
+    font-weight: bold;
+    color: black;
     padding: 0.5rem;
 }
 
+.trashBtn, .checkBtn {
+    border: none;
+    color: white;
+    padding: 0.5rem;
+}
+
+.trashBtn{
+    background: red;
+}
+
+.checkBtn {
+    background: green;
+}
+
+.trashBtn:hover {
+    color: red;
+    background: lightgrey;
+}
+
+.checkBtn:hover {
+    color: green;
+    background: lightgrey;
+}
+
+.addBtn:hover {
+    color: lightgrey;
+    background: #333;
+}
+
+.todo-input, .addBtn {
+    padding: 0.5rem;
+}
+
+.checked{
+    opacity: 50%;
+    text-decoration: line-through;
+}
+
+.fas {
+    pointer-events: none;
+}
   
